--- a/src/services/services.css
+++ b/src/services/services.css
@@ -1,4 +1,27 @@
 .service__item{
     padding: 20px;
-    background:var(--card-bg-01);
+    display: flex;
+    align-items: center;
+    column-gap: 0.7rem;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.service__item span i {
+    font-size: 2.2rem;
+    background: var(--primary-color);
+    padding: 10px;
+    border-radius: 50px;
+    color:#fff;
+    font-weight: 400 !important;
+}
+
+.service__item h3{
+    color:var(--primary-color);
+    font-size:1.1rem;
+    font-weight: 600;
+}
+
+.service__item p{
+    font-weight: 0.9rem;
 }
