--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -40,3 +40,24 @@
     padding-top: 45px;
 }
 
+.timer__count{
+    background: var(--primary-color);
+    height: 300px;
+}
+
+.timer__count img{
+    width: 70% !important;
+    height: 70% !important;
+    object-fit: contain;
+}
+
+.store__tbn{
+    background: #fff;
+    color:var(--primary-color);
+    font-weight: 500;
+}
+
+.store__tbn a:hover{
+    color:var(--primary-color);
+}
+
