HomeScreen: fix responsive
Signed-off-by: Hưng Phan <phandinhhungvp2001@gmail.com>

--- a/src/services/services.css
+++ b/src/services/services.css
@@ -25,3 +25,36 @@
 .service__item p{
     font-weight: 0.9rem;
 }
+
+@media screen and (max-width: 992px){
+    .service__item span i {
+        font-size: 1.8rem;
+        padding: 5px;
+    }
+
+    .service__item h3{
+        font-size: 1rem;
+    }
+
+    .service__item{
+        padding: 10px;
+        margin-bottom: 1.5rem;
+    }
+
+}
+
+@media screen and (max-width: 768px){
+    
+    .service__item span i{
+        font-size: 1.5rem;
+        padding: 5px;
+    }
+
+}
+
+@media screen and (max-width: 576px){
+
+    .service__item{
+        padding: 20px;
+    }
+}
