--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -61,3 +61,54 @@
     color:var(--primary-color);
 }
 
+@media screen and (max-width: 992px){
+    .hero__content h2{
+        font-size: 2rem;
+    }
+    .section__title{
+        font-size: 1.7rem;
+    }
+    .counter__img{
+        display: none;
+    }
+    .clock__top-content{
+        text-align: center;
+    }
+
+    .clock__top-content h4{
+        font-size: 0.9rem !important;
+    }
+    .clock__top-content h3{
+        font-size: 1rem !important;
+    }
+    .count__down-col{
+        text-align:center;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .hero__content h2{
+        font-size: 1.6rem;
+    }
+    .hero__content p{
+        font-size: 0.9rem;
+    }
+    .buy__btn a{
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 992px){
+    .hero__content h2{
+        font-size: 2rem;
+    }
+}
+
+@media screen and (max-width: 576px){
+    .hero__content {
+        padding-top: 0;
+        margin-bottom: 40px;
+    }
+
+}
+
