--- a/src/styles/product-card.css
+++ b/src/styles/product-card.css
@@ -30,3 +30,25 @@
     color:#fff;
     border-radius: 50px;
 }
+
+@media screen and (max-width: 992px){
+   .product__info h3 a{
+     font-size: 1.1rem;
+   }
+}
+
+@media screen and (max-width: 768px){
+    .product__info h3 a{
+      font-size: 1rem;
+    }
+    .product__card-bottom span i{
+        font-size: 1rem;
+        
+    }
+ }
+
+ @media screen and (max-width: 576px){
+    .product__info h3 a{
+      font-size: 1.1rem;
+    }
+ }
