--- a/src/styles/common-section.css
+++ b/src/styles/common-section.css
@@ -1,8 +1,12 @@
 .common__section{
     background-size: contain;
     background: linear-gradient(rgba(0, 0, 0, 0.562),
-    rgba(0, 0, 0, 0.562)),
-    url("../assets/images/common-section-bg.jpg") no-repeat center center;
+    rgba(0, 0, 0, 0.562)),url('../assets/images/thiet-ke-shop-thoi-trang-nam-lozalo-3.jpg')no-repeat center center;
+    background-size: cover;
+    padding: 100px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .common__section h1{
