--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -37,3 +37,13 @@
 .search__box span{
     color:var(--primary-color);
 }
+
+@media only screen and (max-width:768px){
+    .filter__widget{
+        margin-bottom: 30px;;
+    }
+    .filter__widget select{
+        font-size: .9rem;
+        padding: 7px 20px;
+    }
+}
